--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 .site-header {
   background-color: #2E003E;
-  padding: 1rem 2rem;
+  padding: 1rem 32px;
   color: #fff;
 }
 
@@ -16,14 +16,13 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1100px;
-  margin: 0 auto;
 }
 
 .site-title {
   font-family: 'Raleway', sans-serif;
   font-size: 1.5rem;
   font-weight: 700;
+  text-transform: uppercase;
   color: #fff;
   text-decoration: none;
 }
@@ -52,7 +51,9 @@ body {
   outline: none;
 }
 
-/* Optional active state */
-.nav-links a.active {
-  border-bottom: 2px solid #FF4DB8;
+main {
+  padding: 2rem 48px;
+  max-width: 960px;
+  margin-left: 0;
+  margin-right: auto;
 }
