--- a/style.css
+++ b/style.css
@@ -122,3 +122,12 @@ nav a:visited {
   padding: 0;
   list-style-type: disc;
 }
+/* Header site title link styling */
+.site-title a {
+  color: white;
+  text-decoration: none;
+}
+
+.site-title a:hover {
+  text-decoration: underline;
+}
