--- a/style.css
+++ b/style.css
@@ -162,7 +162,8 @@ nav a:visited {
   margin: 0 auto;
   padding: 3rem 1rem 1.5rem 1rem;
   text-align: left;
-}
+
+  text-align: center;}
 
 /* Center the intro heading */
 .intro-heading {
