--- a/style.css
+++ b/style.css
@@ -452,12 +452,11 @@ nav a:hover {
 }
 
 .about-columns > div {
+  position: relative; /* needed for the pseudo-element */
   flex: 1;
   padding: 1.5rem;
-  border-radius: 8px;
-  background-color: #fff;
-  box-shadow: none; /* You can keep this if you prefer shadows */
-  position: relative;
+  background-color: transparent; /* REMOVE if you're seeing weird white cards */
+  box-shadow: none; /* optionally remove to simplify the look */
 }
 
 /* Add divider to all but the last column */
@@ -465,10 +464,10 @@ nav a:hover {
   content: "";
   position: absolute;
   top: 10%;
-  right: -1rem;
-  width: 1px;
+  right: 0;
+  width: 3px;
   height: 80%;
-  background-color: #ccc;
+  background-color: #6a1b9a; /* your chosen purple */
 }
 
 .about-column {
