--- a/style.css
+++ b/style.css
@@ -596,6 +596,9 @@ form {
   font-family: inherit;
 }
 
+form > div {
+  margin-bottom: 1.5rem;
+}
 input, textarea, select {
   width: 100%;
   padding: 0.75rem;
@@ -609,6 +612,7 @@ label {
   font-weight: bold;
   display: block;
   margin-top: 1rem;
+  color: #2c2c2c;
 }
 
 .required {
@@ -635,4 +639,21 @@ label {
 
 .hidden {
   display: none;
+}
+
+.contact-intro {
+  max-width: 700px;
+  margin: 3rem auto 2rem;
+  padding: 0 1rem;
+  text-align: center;
+}
+
+.contact-intro h1 {
+  font-size: 1.75rem;
+  margin-bottom: 1rem;
+}
+
+.contact-intro p {
+  margin-bottom: 0.75rem;
+  line-height: 1.6;
 }
